# ISOTOPE

./: CHECK_~1.PY  INVARI~1.PY  LICENSE  Makefile  README.md  SERIAL~1.PY  TEST_S~1.PY  __init__.py  labels.py  pyproject.toml  track.py
.github/workflows/: release.yml  verify.yml
examples/: demo_pandas_pii.py
src/isotope/: __init__.py  invariants.py  lineage.py  pandas_ext.py  polars_ext.py  policies.py  policy.py  serialize.py  spark_ext.py  sqlalchemy_ext.py  track.py
tests/: test_invariants.py  test_pandas_ext.py  test_polars_ext.py  test_policies.py  test_policy.py  test_spark_ext.py  test_sqlalchemy_ext.py  test_track.py
