[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "isotope-lineage"
version = "0.1.0"
description = "Data lineage and taint-tracking library with verifiable integrity invariants (I1-I5)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Tetiana Radchenko" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]
pandas = ["pandas>=1.5"]
polars = ["polars>=1.0"]
spark = ["pyspark>=3.4"]
sqlalchemy = ["sqlalchemy>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]
"tests/test_invariants.py" = ["E402", "E741"]
